Created page with "The nVidia GPU is a popular graphical chipset. Although it is a proprietary driver, it is often seen as a must-have for the more intense 3D applications and games.  == Resources ..."

--- a/NVIDIA.mw
+++ b/NVIDIA.mw
@@ -1,17 +1,5 @@
-{{InfoBox stack
-|{{InfoBox homepage|https://www.nvidia.com/en-us/|header=true}}
-|{{InfoBox wikipedia|Nvidia}}
-}}
+The nVidia GPU is a popular graphical chipset. Although it is a proprietary driver, it is often seen as a must-have for the more intense 3D applications and games.
 
-NVIDIA is [[Article description::a popular graphical chipset manufacturer.]] NVIDIA GPUs can use either open source ({{package|x11-drivers/xf86-video-nouveau}}) or proprietary (closed source) drivers ({{package|x11-drivers/nvidia-drivers}}). Because it is more up-to-date and efficient, the proprietary driver is often seen as a must-have for more computationally intensive 3D applications and games.
+== Resources ==
 
-== Available software and articles ==
-
-* {{See also|NVIDIA/nvidia-drivers}}
-* {{See also|Nouveau}}
-* {{See also|NVIDIA/Optimus}}
-* {{See also|NVIDIA/Bumblebee}}
-* {{See also|Nouveau & nvidia-drivers switching}}
-
-[[Category:Graphics Adapters]]
-[[Category:Meta]]
+* [[NVidia/HOWTO|HOWTO use nvidia drivers on Gentoo]]
