Created page with "==How to Start==  You will need to know what hardware you are using.  Don't despair, we can walk you through this.  The easiest way to find out starts with getting a Gentoo LiveD..."

--- a/Installation.mw
+++ b/Installation.mw
@@ -1,20 +1,26 @@
-The installation of a Gentoo Linux system differs much from the installation methods of more desktop-oriented operating systems, like Microsoft Windows, MacOS, and popular Linux distributions such as Ubuntu or Fedora. Unlike these, the Gentoo Linux installation is a ''manual approach'' where the user is invited to execute, in a guided manner, the necessary commands to set up their system. Because of this, the installation is one of the major hurdles users have to go through, but once accomplished, they will already have learned quite a lot of Linux in general, and Gentoo in specific.
+==How to Start==
 
-{{Important|If you expect support for the installation (or results of the installation) you have to follow the official documents. Using unofficial guides may result in a request to start all over again using the official documents.}}
+You will need to know what hardware you are using.  Don't despair, we can walk you through this.  The easiest way to find out starts with getting a Gentoo LiveDVD.  Gentoo has two versions, one for x86 processors, and one for AMD64.  So, which do you need?
 
-== Installation resources ==
-=== Official instructions ===
-The official installation instructions are hosted in the [[Handbook:Main Page|Gentoo Handbooks]] as their first part. These are kept up to date by the [[Project:Handbook|Handbook Project]] in close cooperation with the release engineering team, architecture teams and maintainers.
+'''x86''' - for any PC, can be used for newer PC's as well.  Can also be used for most [http://en.wikipedia.org/wiki/Apple's_transition_to_Intel_processors Macs] made 2006 and later.
 
-=== Unofficial instructions ===
-Various community-driven installation instructions have emerged. A small set of these is listed below.
+'''AMD64''' - for newer PC's that have a 64 bit processor (whether AMD or Intel).  If in doubt, you can still use the DVD for the x86.  Use the AMD64 Gentoo Live DVD only if you are sure you have 64 bit processors, or if you have a multiple cores (Intel core duo, quad core, AMD dual core, etc.).  All multi-cores are 64 bit.
 
-* [http://swift.siphos.be/linux_sea/installgentoo.html Installing Gentoo Linux], as part of the [http://swift.siphos.be/linux_sea/ Linux Sea] online e-book
-* [[Complete_Handbook|Complete Handbook]], a community-driven effort to create a fully documented approach on Gentoo Linux
-* [[Sakaki's_EFI_Install_Guide|Sakaki's EFI Install Guide]], a detailed tutorial showing how to install a dual secure-boot Gentoo system on a Windows 10 (or 8) UEFI PC, including full instructions for LUKS, LVM, systemd and GNOME 3. Now extended to also cover the "GNOME 3 with OpenRC" use case.
+'''Other''' - if you don't have a processor with Intel/AMD PC architecture, such as a RISC or a MIPS, you will need to find a way to run Linux on it. <links needed>
 
-Some instructions are made specifically for one hardware type (for instance a particular laptop).
 
-* [https://www.thinkwiki.org/wiki/Installing_Gentoo_on_a_ThinkPad_X220 Installing Gentoo on a ThinkPad X220]
+Download the ISO image.  You can download this in any OS (Windows 98, XP, Vista, 7, 8, Mac, Linux, BSD, etc).  The important thing is that you have a DVD Burner utility to burn the image onto a DVD.  In Windows XP and later, you can let Windows do it instead of running a separate burner utility.
 
-[[Category:Core system]]
+Burn the image onto the DVD.
+
+Once you have finished burning the DVD, you can put it into the DVD reader of the computer you are going to load Linux on, and start it up.
+
+Continue at [[Starting the Gentoo LiveDVD]]
+
+
+===Concerns===
+
+
+But I don't have a DVD burner!  [[Other installation media options]]
+
+But I don't have a DVD reader on the computer I want to put Linux on! [[Other installation media options]]
