--- a/Xrandr.mw
+++ b/Xrandr.mw
@@ -1,159 +1,69 @@
-<languages />
-<translate>
-<!--T:1-->
 {{InfoBox stack
-|{{InfoBox homepage|http://www.x.org/wiki/Projects/XRandR/|header=true}}
-|{{InfoBox wikipedia|RandR}}
-|{{InfoBox gitweb|http://cgit.freedesktop.org/xorg/app/xrandr/|raw=true}}
+|{{InfoBox wikipedia|RandR|header=true}}
 }}
-The '''RandR''' ('''R'''esize '''and''' '''R'''otate)<ref>https://cgit.freedesktop.org/xorg/proto/randrproto/tree/randrproto.txt</ref> [[Article description::[[X]] protocol extension and its CLI tool {{c|xrandr}} are used to manage screen resolutions, rotation and screens with multiply displays in X]].
+RandR and the tool xrandr are used to manage screen resolutions, roation and screens with multiply displays in X. Future versions will also support GPU via USB.
 
-<!--T:2-->
-With version 1.4 support for multiply graphics cards was introduced, future versions (>1.5) will also support monitors attached via USB (this will probably be merged with xorg-server 1.13 with support for [[DisplayLink]]<ref>http://keithp.com/blogs/hotplug-displaylink/</ref>).
-
-== Installation == <!--T:3-->
-
-<!--T:4-->
-The {{Package|x11-apps/xrandr}} package can be installed with the following command:
-
-<!--T:5-->
+== Installation ==
+You can install {{Package|x11-apps/xrandr}} with the following command:
 {{Emerge|x11-apps/xrandr}}
+{{Note|this tools should be automatically get installed with most window managers as they use it to manage the displays}}
 
-<!--T:6-->
-{{Note|This tool should automatically install with most [[:Category:Window manager|window managers]] since it is used to manage the displays.}}
+=== Configuration Files ===
+A common way to execute X related scripts is the use of {{Path|~/.xinitrx}} or {{Path|~/.xprofile}}. Just out the line of code for xrandr in one of these files and it will be executed on every X startup to make settings permanent.
 
-=== GUI tools === <!--T:7-->
+== Usage ==
+xrandr uses the monitors EDID to identify its capabilities. Some graphic drivers, as the nNvidia or AMD binary, do not support xrandr or faulty hardware report wrong EDIDs, but even in those cases it is still possible to use custom made setups by trial and error.
 
-<!--T:8-->
-There are several GUI tools to use {{c|xrandr}}. Here is a list of tools supported in Gentoo:
-
-<!--T:9-->
-* {{Package|x11-misc/arandr}} – Another XRandR GUI (an independent GUI tool)
-* {{Package|lxde-base/lxrandr}} – [[LXDE]] GUI interface to RandR extension
-
-== Configuration == <!--T:10-->
-
-<!--T:11-->
-A common way to execute [[Xorg|X]] related scripts is the use of {{Path|~/.xinitrc}} or {{Path|~/.xprofile}} files in a user's home directory. Put the line of code for {{c|xrandr}} in one of these files and it will be executed on every X startup to make settings permanent.
-
-== Usage == <!--T:12-->
-
-<!--T:13-->
-{{c|xrandr}} uses the monitors ''Extended Display Identification Data'' ([[Wikipedia:Extended_Display_Identification_Data|EDID]]) to identify its capabilities. Faulty hardware might report wrong or bad EDIDs, in those cases it is still possible to use custom made setups by trial and error.
-
-<!--T:14-->
-{{Warning|Some graphic drivers like the binary [[NVIDIA/nvidia-drivers|NVIDIA]] or [[AMDGPU-PRO|AMD]], do not support {{c|xrandr}}.}}
-
-=== Screen query === <!--T:15-->
-
-<!--T:16-->
-Running {{c|xrandr}} without any arguments will list all available display output interfaces and display devices along with their current state and capabilities:
-
-<!--T:17-->
-{{Cmd|xrandr|output=<pre>
+=== Screen Query ===
+Running xrandr without any arguments will show attached monitors and its capabilities:
+{{Cmd|xrandr<pre>
 Screen 0: minimum 320 x 200, current 1440 x 900, maximum 8192 x 8192
-VGA-1 disconnected (normal left inverted right x axis y axis)
-LVDS-1 connected 1440x900+0+0 (normal left inverted right x axis y axis) 304mm x 190mm
+VGA1 disconnected (normal left inverted right x axis y axis)
+LVDS1 connected 1440x900+0+0 (normal left inverted right x axis y axis) 304mm x 190mm
    1440x900       60.1*+
    1024x768       60.0
    800x600        60.3
-   640x480        59.9
-</pre>}}
+   640x480        59.9</pre>}}
+* LVDS - laptop monitor
+* DVI - digital external port
+* VGA - analogue VGA external port
+* TV - TV-Out (like HDMI)
+* S-video - radeon integrated TV-Out
+* DP - DisplayPort (like HDMI)
 
-<!--T:18-->
-A {{c|xrandr}} query result contains all available interfaces labeled as <code><interface_name>-<index></code>. Each shows its connection status and the reported screen modes. The connected device's current mode is hinted by <code>*</code>, the preferred mode is hinted by <code>+</code>.
-
-<!--T:19-->
-The ''RandR'' naming scheme for common display interfaces:
-
-<!--T:20-->
-* <code>LVDS</code> - [[Wikipedia:FPD-Link|Laptop screen]]
-* <code>HDMI</code> - [[Wikipedia:HDMI|High-Definition Multimedia Interface]]
-* <code>DVI</code> - [[Wikipedia:Digital Visual Interface|Digital Visual Interface]]
-* <code>DP</code> - [[Wikipedia:DisplayPort|DisplayPort]]
-* <code>VGA</code> - [[Wikipedia:Video Graphics Array|Video Graphics Array]]
-* <code>TV</code> - [[Wikipedia:Composite video|Composite Video]]
-* <code>S-video</code> - [[Wikipedia:S-Video|S-Video]]
-
-=== Screen manipulation === <!--T:21-->
-
-<!--T:22-->
-It is possible to manipulate output interfaces discovered via a {{c|xrandr}} query. Examples of common tasks:
-
-<!--T:23-->
-* Set the primary display if more than one device is attached:
-
-<!--T:24-->
-: {{Cmd|xrandr --output LVDS-1 --primary}}
-
-<!--T:25-->
-* Extend to an external display attached on a known interface (''left-of'', ''right-of'', ''above'', ''below'', ''same-as''):
-
-<!--T:26-->
-: {{Cmd|xrandr --output DVI-1 --auto --left-of LVDS-1}}
-
-<!--T:27-->
-* Rotate a display (''normal'', ''left'', ''right'', ''inverted''):
-
-<!--T:28-->
-: {{Cmd|xrandr --output LVDS-1 --rotate left}}
-
-<!--T:29-->
-* Turn off the device:
-
-<!--T:30-->
-: {{Cmd|xrandr --output LVDS-1 --off}}
-
-=== Screen modes === <!--T:31-->
-
-<!--T:32-->
-A mode always consists of a resolution and a refresh-rate. With a {{c|xrandr}} query the hardware reports which modes are supported. It is possible to define own modes in case the hardware reports wrong information. To change the mode for an attached device:
-
-<!--T:33-->
-{{Cmd|xrandr --output LVDS-1 --mode 1024x768}}
-
-<!--T:34-->
+=== Screen Modes ===
+A mode always consists of a resolution and a refresh-rate. With a query the hardware reports which modes are supported. It is possible to define own modes in case the hardware reports wrong information. To change the mode for an attached device:
+{{Cmd|xrandr --output LVDS --mode 1024x768}}
 It will use the highest refresh-rate in that mode, to also change the refresh-rate (in kHz):
-
-<!--T:35-->
-{{Cmd|xrandr --output LVDS-1 --mode 1024x768 --rate 75}}
-
-<!--T:36-->
-The changes apply immediately and on the hardware listed above it might either produce an error or the screen goes blank, because 75kHz is not supported. This will last until the next session, using {{Key|Ctrl}}+{{Key|Alt}}+{{Key|Backspace}} will terminate the session and restart [[X]] in case something goes wrong.
-
-<!--T:37-->
-To add a 75Hz mode, the tool {{c|cvt}} ({{Package|x11-base/xorg-server}}) can be used to get a proper modeline:
-
-<!--T:38-->
+{{Cmd|xrandr --output LVDS --mode 1024x768 --rate 75}}
+The changes apply immediately and on the hardware listed above you will either get an error or the screen goes blank now, because 75kHz is not supported. This will last until the next session, you can use {{Key|Ctrl}}+{{Key|Alt}}+{{Key|Backspace}} to restart X in case something goes wrong.
+To add a 75Hz mode, first get a proper modeline using the tool '''cvt''':
 {{Cmd|cvt 1024x768 refresh 75}}
-
-<!--T:39-->
-Everything after ''Modeline'' needs to be appended to the following command:
-
-<!--T:40-->
+Copy everything from the output but the ''Modeline'' at the beginning and append it to the following command like:
 {{Cmd|xrandr --newmode "1024x768_75.00"  109.00  1280 1368 1496 1712  1024 1027 1034 1063 -hsync +vsync}}
+running the query again should list our new added mode.
+{{Note|adding the mode manually does not make the monitor work in the mode, if it didn't work before}}
 
-<!--T:41-->
-Running the query again should list the newly added mode.
+=== Screen Manipulation ===
+Some common tasks using xrandr:
+* extend to an external monitor (''left-of'', ''right-of'', ''above'', ''below'', ''same-as''):
+{{Cmd|xrandr --output DVI-0 --auto --left-of LVDS}}
+* set the primary display if more than one is attached:
+{{Cmd|xrandr --output LVDS --primary}}
+* rotate a display (''normal'', ''left'', ''right'', ''inverted''):
+{{Cmd|xrandr --output LVDS --rotate left}}
+* turn off the monitor
+{{Cmd|xrandr --output LVDS --off}}
 
-<!--T:42-->
-{{Note|Adding the mode manually does not make the display device work in the mode if it did not work before.}}
+=== GUI Tools ===
+There are several GUI tools to use xrandr, here is a list of tools supported in Gentoo:
+* {{Package|x11-misc/arandr}} - independent GUI tool
+* {{Package|x11-apps/grandr}} - GTK Desktop tool
+* {{Package|kde-base/kephal}} - KDE Desktop tool
+* {{Package|lxde-base/lxrandr}} - LXDE desktop tool
 
-== See also == <!--T:43-->
+== External resources ==
+* [http://linux.die.net/man/1/xrandr - xrandr man page]
+* [http://www.x.org/wiki/Projects/XRandR - Xorg Foundation]
 
-<!--T:44-->
-* {{See also|Xorg}}
-
-== External resources == <!--T:45-->
-
-<!--T:46-->
-* [http://linux.die.net/man/1/xrandr xrandr man page]
-
-== References == <!--T:47-->
-
-<!--T:48-->
-{{Reflist}}
-
-</translate>
-
-[[Category:X.Org]]
+[[Category:Desktop]]
